# Bayesian-Learning-with-Wasserstein-Barycenters

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  requirements2.txt  setup.py
bwb/: __distributions.py  __init__.py  _logging.py  _protocols.py  bregman.py  config.py  distributions.py  exceptions.py  geodesics.py  logging.py  logging_.py  plotters.py  protocols.py  sgdw.py  transports.py  utils.py  validation.py
bwb/distributions/: __init__.py  data_loaders.py  discrete_distribution.py  distribution_draw.py  distribution_samplers.py  models.py  posterior_distributions.py  posterior_samplers.py  stats.py  utils.py
bwb/distributions/posterior_distributions/: explicit_posterior.py  posterior_pi_n.py
bwb/pot/: bregman.py  geodesics.py  transports.py
bwb/sgdw/: __init__.py  plotters.py  sgdw.py  utils.py  wrappers.py
bwb/utils/: __init__.py  autocorr.py  plotters.py  protocols.py  utils.py  validation.py
data/: README.md
docs/: README.md
examples/: 01-discrete-distribution.ipynb  02-posterior-pi-n.ipynb  02.5-distr-sampler.ipynb  02.75-pruebas-posterior-sampler.ipynb  03-transport-classes.ipynb  04-baricenters.ipynb  04-baricenters.ipynb.tmp  04.5-baricenters-manifold.ipynb  04.75-baricenters-manifold.ipynb  05-geodesics.ipynb  06-wgan-gp-example.ipynb  07-geodesics-projected.ipynb
examples/01-discrete-distribution/: 01-discrete-distribution.ipynb
examples/02-distribution-sampler/: 01-distribution-samplers.ipynb  02-posterior-samplers.ipynb  03-experiments-posterior-samplers.ipynb
examples/03-sgdw/: 01-basic-sgdw.ipynb  02-batched-sgdw.ipynb  03-projected-sgdw.ipynb  03-proyected-sgdw.ipynb  04-projected-batched-sgdw.ipynb  05-bayesian-barycenter-checkpoint.ipynb  05-bayesian-barycenter.ipynb  06-bayesian-barycenter-projected.ipynb  70-projected-sgdw-experiments.ipynb  80-bayesian-barycenter-projected-ss=20-bs=1.ipynb  81-bayesian-barycenter-projected-ss=20-bs=1-Copy1.ipynb  90-exp-projected-const-step.ipynb  95-batched-sgdw.ipynb  96-proyected-sgdw.ipynb  98-GAN-barycenter.ipynb  99-Bayesian-barycenter.ipynb  TODO.md
imgs/: prueba
notebooks/: 01-fmg-explorar-datos-quick-draw.ipynb  02-fmg-jugando-con-pot.ipynb  03-fmg-obteniendo-ot-entre-caras.ipynb  04-fmg-probando-clase-DistributionDraw.ipynb  05-fmg-programando-mcmc.ipynb  06-fmg-soporte-no-nulo-mcmc.ipynb  07-fmg-probando-clases-PosteriorPiN.ipynb  08-fmg-estadisticas-mcmc.ipynb  09-fmg-probando-clases-transform.ipynb  10-fmg-programando-baricentros.ipynb  Untitled.ipynb  experiments-pytorch-scipy.ipynb
notebooks/notebooks-ejecutados-html/: 00-fmg-pruebas.ipynb  01-fmg-explorar-datos-quick-draw.html  02-fmg-jugando-con-pot.html  03-fmg-obteniendo-ot-entre-caras.html  04-fmg-probando-clase-DistributionDraw.html  05-fmg-programando-mcmc.html  06-fmg-soporte-no-nulo-mcmc.html  07-fmg-probando-clases-PosteriorPiN.html  08-fmg-estadisticas-mcmc.html  10-fmg-programando-baricentros.html  README.md
tests/: test_distributions.py
tests/distributions/: test_discrete_distribution.py  test_utils.py
tests/sgdw/: test_sgdw.py
