[tool.poetry]
name = "bayesian-learning-with-wasserstein-barycenters"
version = "0.1.0"
description = ""
authors = ["Francisco Muñoz <fmunoz@ug.uchile.cl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pot = "^0.9.3"
torch = { version = "^2.2.2+cu118", source = "pytorch-gpu" }
torchvision = { version = "^0.17.2+cu118", source = "pytorch-gpu" }
torchaudio = { version = "^2.2.2+cu118", source = "pytorch-gpu" }
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
ipyplot = "^1.1.2"
quick-torch = "^1.0.4"
hamiltorch = { git = "https://github.com/AdamCobb/hamiltorch" }


[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
mypy = "^1.9.0"
monkeytype = "^23.3.0"
pyro-ppl = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
