[tool.poetry]
name = "bayesian-learning-with-wasserstein-barycenters"
version = "0.1.0"
description = ""
authors = ["Francisco Muñoz <fmunoz@ug.uchile.cl>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pot = "^0.9.3"
torch = { version = "^2.2.2+cu118", source = "pytorch-gpu" }
torchvision = { version = "^0.17.2+cu118", source = "pytorch-gpu" }
torchaudio = { version = "^2.2.2+cu118", source = "pytorch-gpu" }
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
ipyplot = "^1.1.2"
quick-torch = "^1.0.4"
hamiltorch = { git = "https://github.com/AdamCobb/hamiltorch" }


[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
mypy = "^1.9.0"
monkeytype = "^23.3.0"
pyro-ppl = "^1.9.0"
icecream = "^2.1.3"
pickleshare = "^0.7.5"
python-dotenv = "^1.0.1"
pytest = "^8.2.0"
black = {extras = ["jupyter"], version = "^24.10.0"}
pre-commit = "^4.0.1"

[tool.black]
line-length = 80
target-version = ['py311', 'py312']
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''
preview = true
unstable = true

[tool.isort]
profile = "black"

[tool.ruff]
fix = true
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "tests",
    "*.ipynb",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D", "RUF"]
ignore = [
    "F821", # Undefined name
    "D212", # Multi-line docstring summary should start at the first line
    "E741", # Ambiguous variable name: `l` | TODO
    "D205", # 1 blank line required between summary line and description
    "D105", # Missing docstring in magic method
    "D415", # First line should end with a period
    "D400", # First line should end with a period
    "D401", # First line should be in imperative mood
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.pycodestyle]
max-doc-length = 80

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
